--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
                     <h3>Infrastructure as Code</h3>
                     <div class="skill-items">
                         <div class="skill-item">
-                            <i class="fas fa-mountain"></i>
+                            <i class="fas fa-code"></i>
                             <span>Terraform</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-cogs"></i>
+                            <i class="fas fa-tools"></i>
                             <span>Ansible</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fab fa-microsoft"></i>
+                            <i class="fas fa-file-code"></i>
                             <span>ARM templates</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-code"></i>
+                            <i class="fas fa-file-code"></i>
                             <span>Bicep</span>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                             <span>Bash</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fab fa-microsoft"></i>
+                            <i class="fas fa-terminal"></i>
                             <span>PowerShell</span>
                         </div>
                         <div class="skill-item">
@@ -174,11 +174,11 @@
                             <span>Docker</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-kubernetes"></i>
+                            <i class="fas fa-network-wired"></i>
                             <span>Kubernetes</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fab fa-azure"></i>
+                            <i class="fas fa-cloud"></i>
                             <span>Azure</span>
                         </div>
                         <div class="skill-item">
@@ -190,7 +190,7 @@
                             <span>GitHub</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fab fa-microsoft"></i>
+                            <i class="fas fa-project-diagram"></i>
                             <span>Azure DevOps</span>
                         </div>
                     </div>
