--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <span>ARM templates</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-file-code"></i>
+                            <img src="icons/bicep.svg" alt="Bicep" class="skill-icon">
                             <span>Bicep</span>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                             <span>Bash</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fab fa-windows"></i>
+                            <img src="icons/powershell.svg" alt="PowerShell" class="skill-icon">
                             <span>PowerShell</span>
                         </div>
                         <div class="skill-item">
@@ -157,11 +157,11 @@
                             <span>Python</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-code"></i>
+                            <img src="icons/typescript.svg" alt="TypeScript" class="skill-icon">
                             <span>TypeScript</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-code"></i>
+                            <img src="icons/perl.svg" alt="Perl" class="skill-icon">
                             <span>Perl</span>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                             <span>Azure</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-database"></i>
+                            <img src="icons/databricks.svg" alt="Databricks" class="skill-icon">
                             <span>Databricks</span>
                         </div>
                         <div class="skill-item">
@@ -190,7 +190,7 @@
                             <span>GitHub</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fab fa-microsoft"></i>
+                            <img src="icons/azure-devops.svg" alt="Azure DevOps" class="skill-icon">
                             <span>Azure DevOps</span>
                         </div>
                     </div>
@@ -203,20 +203,16 @@
                             <span>CKA: Certified Kubernetes Administrator</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-certificate"></i>
+                            <img src="icons/azure-expert.svg" alt="AZ-400" class="skill-icon">
                             <span>AZ-400: Designing and Implementing Microsoft DevOps Solutions</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-certificate"></i>
+                            <img src="icons/azure-associate.svg" alt="AZ-204" class="skill-icon">
                             <span>AZ-204: Developing Solutions for Microsoft Azure</span>
                         </div>
                         <div class="skill-item">
-                            <i class="fas fa-certificate"></i>
+                            <img src="icons/azure-associate.svg" alt="AZ-104" class="skill-icon">
                             <span>AZ-104: Azure Administrator Associate</span>
-                        </div>
-                        <div class="skill-item">
-                            <i class="fas fa-award"></i>
-                            <span>'DevOps Expert' badge from Microsoft</span>
                         </div>
                     </div>
                 </div>
